refactor: 四大服务风格统一 + 租户管理 + 环境配置 (#10)
* feat(vul): 新增漏洞模板模块基础（实体、枚举、VO、DTO、Mapper、MapStruct、建表DDL）

- 新增 VulTemplate/VulCategory/VulCategoryMapping 三张表
- VulSeverityEnum 枚举实现 IEnum 适配 MybatisEnumTypeHandler
- VulVO / PageVulVO / VulCategoryVO 视图对象
- VulTemplateDetectDTO 轻量传输对象（给 detection-service 用）
- VulTemplateMapper / VulCategoryMapper / VulCategoryMappingMapper
- VulMapstruct MapStruct 转换器
- 库模块 POM 配置 spring-boot-maven-plugin skip
- 新增 mysql-connector-j、snakeyaml 依赖

* feat(vul): 实现漏洞模板CRUD、分类管理及YAML模板批量导入

- VulTemplateService: 分页查询（支持name/severity/tags/categoryId筛选）、CRUD、getForDetection
- VulCategoryService: 树形分类管理（防环校验、父子约束、批量关联/移除模板）
- VulTemplateImportService: 从 ddocs/http/ 解析 10,688 个 Nuclei YAML 模板批量入库
- VulTemplateController: 6 个 REST 端点
- VulCategoryController: 6 个 REST 端点
- 导入端点（/import/*）已完成数据初始化，注释掉不再暴露
- VulApplication 添加 ComponentScan/MapperScan 扫描 common-utils 包
- 移除显式 driver-class-name，Spring Boot 自动识别

* fix(asset): 代码审查修复 — 默认值冲突、事务缺失、空更新保护、日志注解、命名统一

- AssetVO.Request: 移除 status/riskLevel 字段默认值，解决与 Service 默认逻辑冲突
- 所有写方法补 @Transactional(create/update/removeAssets)
- update() 新增强全 null 请求校验，防止生成无 SET 子句的无效 SQL
- 核心方法加 @LogExecutionTime 注解，接入通用日志切面
- AssetServiceImpl 中 mappingMapper 统一命名

* test(asset): 新增 AssetService 和 AssetCategoryService 单元测试（42 个）

- AssetServiceImplTest: 20+1 个测试，覆盖分页查询/单查/创建/更新/删除
- AssetCategoryServiceImplTest: 20+1 个测试，覆盖列表/创建/更新/删除/资产关联
- 解决 MP 单测两大坑：baseMapper 注入 + LambdaWrapper 缓存初始化

* fix(vul): 代码审查修复 — 架构对齐、事务缺失、N+1、校验注解、风格统一

- 1.1/1.5 新增 AdditionalScanConfig 替代启动类硬编码 @ComponentScan
- 1.2 移除 api/common/business POM 中冗余的 spring-boot-maven-plugin skip
- 1.3 yml 补回 driver-class-name、添加 MyBatis-Plus 迁移注释
- 1.4 DDL 从 resources/sql 移至服务根目录 vul-ddl.sql
- 2.1 VulVO.Request 加 @NotBlank 校验必填字段
- 2.2 delete() 拒绝有分类关联时直接删除（与 asset 行为一致）
- 2.3 flushBatch 改用批量 IN 查重，消除 10,000+ 次 N+1
- 2.4 VulSeverityEnum 移除无效的 IEnum<Integer>，DB 存 VARCHAR
- 2.5 create/update 补 @Transactional
- 2.6 Category update 改用 LambdaUpdateWrapper 部分更新
-